correct the arrow align2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,7 +124,13 @@ body {
   background: none; /* Remove button background */
   color: #222222; /* Button color */
 }
+.arrow-left {
+  left: 1px; /* Position arrow to the left */
+}
 
+.arrow-right {
+  right: 1px; /* Position arrow to the right */
+}
 #filters {
   display: flex;
   flex-wrap: nowrap;
